--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
                         <a href="tel:4255126491"><img id="phoneicon-white" alt="phone icon" src="https://dsm01pap009files.storage.live.com/y4mTilPsaCt0rKJkg83mIoBIbkW0fURIs82gnXJTcXutlovweZ73Fya-hmqbwr6sN5bg5KsNgoOzTguu6D62ygqztsH0Hu3-YYXSUAkKUUirH_B91n3GmdIe3S1l5U8QW0zSt3D4115wFZgndkHaYUkPFrT1g8K1qiHGn_15I2_aXDU53xATOAT7HincVewxVfp?width=23&height=23&cropmode=none">(425)-512-6491</a>
                         <p>Call for a free quote!</p>
                     </div>
+                    <a id="call-now-btn" href="tel:4255126491">
+                        <div>    
+                            <p>Call Now</p>
+                            <img alt="dark green phone icon" src="https://dsm01pap009files.storage.live.com/y4m_HwXBeWXFtcg_FnBqiBr6x8wvq5_YTt9mOW3yV3JOcBDRsbfD_Z4ucRTW_AGpS5FcjVQOIbOK4hZJSRi8sdBVocD_ItheEZSZD5Ouo9a5fGVQ3nHyEgKIMfxfTCHd2QPlIFpSUoIlEaAyr6gqbY3nWQrljrwPg26vGdTzFMPQje6sDw_ow03pjRqe5Kh3gma?width=49&height=21&cropmode=none">
+                        </div>
+                    </a>
                 </div>
             </div>
             <header>
@@ -49,7 +55,7 @@
                         <li class="non-drop"><a href="gallery.html">Gallery</a></li>
                         <li id="dropdown">
                             <a id="dropdown-btn" href="services.html">Services</a>
-                            <div id="dropdown-content">
+                            <div id="dropdown-content" class="hide-xs" > 
                                 <a href="tree-care.html">Tree Care</a>
                                 <a href="garden-maintenance.hmtl">Maintenance</a>
                                 <a href="garden-design.html">Garden Design</a>
