--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta prefix="og: http://ogp.me/ns#" property="og:image" content="">
         <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardens.net/">
         
-        <title>Gaia Gardens | Home</title>
+        <title>Gaia Gardens Home</title>
 
         <!---CSS---->
         <link rel="stylesheet" href="css/main.css">
@@ -36,7 +36,7 @@
                 <div class="callnow-section hide-xs">
                     <div id="phone-number">
                         <a href="tel:4255126491"><img id="phoneicon-white" alt="phone icon" src="https://dsm01pap009files.storage.live.com/y4mTilPsaCt0rKJkg83mIoBIbkW0fURIs82gnXJTcXutlovweZ73Fya-hmqbwr6sN5bg5KsNgoOzTguu6D62ygqztsH0Hu3-YYXSUAkKUUirH_B91n3GmdIe3S1l5U8QW0zSt3D4115wFZgndkHaYUkPFrT1g8K1qiHGn_15I2_aXDU53xATOAT7HincVewxVfp?width=23&height=23&cropmode=none">(425)-512-6491</a>
-                        <p>Call for a free quote!</p>
+                        <p>Call Now to Schedule an Appointment!</p>
                     </div>
                     <a class="call-now-btn" href="tel:4255126491">
                         <div>    
@@ -48,7 +48,7 @@
             </div>
             <header id="main-nav-header">
                 <div class="socials hide-xs">
-                    <a href = "mailto: bre@gaiagardensllc.com"><img id="mailicon" alt="mail icon" src="https://dsm01pap009files.storage.live.com/y4mEsTZCBcO845LlwkhJlc1pOtaRWJh5r6nbFu8XhN_mDLWwPPZtIUi6-Gzw5cZXer-W9WBpNVLy2F3Q0q1JcIAxwwPd9SsB3yX-Uk8sGWwQX70urtUi5uHDKnWAd0V3nrqd20-imoskoX5eyqN7YU6lUedPBeU7eeY3IxwQbE3vyyV3AFhUA94FJJuhz1JTbZG?width=42&height=30&cropmode=none"></a>
+                    <a href = "mailto: bre@gaiagardensllc.com"><img id="mailiconhomepage" alt="mail icon" src="https://dsm01pap009files.storage.live.com/y4mEsTZCBcO845LlwkhJlc1pOtaRWJh5r6nbFu8XhN_mDLWwPPZtIUi6-Gzw5cZXer-W9WBpNVLy2F3Q0q1JcIAxwwPd9SsB3yX-Uk8sGWwQX70urtUi5uHDKnWAd0V3nrqd20-imoskoX5eyqN7YU6lUedPBeU7eeY3IxwQbE3vyyV3AFhUA94FJJuhz1JTbZG?width=42&height=30&cropmode=none"></a>
                 </div>
                 <nav id="main-nav" class="hide-xs">
                     <ul>
@@ -58,8 +58,8 @@
                             <a id="dropdown-btn" href="services.html">Services</a>
                             <div id="dropdown-content" class="hide-xs" > 
                                 <a href="tree-care.html">Tree Care</a>
-                                <a href="garden-maintenance.hmtl">Maintenance</a>
                                 <a href="garden-design.html">Garden Design</a>
+                                <a href="hire-us.html">Hire Us!</a>
                             </div>
                         </li>
                         <li class="non-drop"><a href="about.html">About</a></li>
@@ -77,7 +77,7 @@
                                 <img alt="dark green phone icon" src="https://dsm01pap009files.storage.live.com/y4m_HwXBeWXFtcg_FnBqiBr6x8wvq5_YTt9mOW3yV3JOcBDRsbfD_Z4ucRTW_AGpS5FcjVQOIbOK4hZJSRi8sdBVocD_ItheEZSZD5Ouo9a5fGVQ3nHyEgKIMfxfTCHd2QPlIFpSUoIlEaAyr6gqbY3nWQrljrwPg26vGdTzFMPQje6sDw_ow03pjRqe5Kh3gma?width=49&height=21&cropmode=none">
                             </div>
                         </a>
-                        <p>Call Now For a Free Quote</p>
+                        <p>Call Now To Schedule an Appointment</p>
                     </div>
                 </div>
             </div>
@@ -121,11 +121,11 @@
                         <div id="familyinfo">
                             <h3>Our Story</h3>
                             <p>
-                                serfrsdfsdfasdfwsdfasdfasdfasdfasdfasdfasdfsadfasdfasfdasdfasdfas. dfhaksjfdhaskdjahsjk aksjdhakjsdhakjsdh jashd.
+                                Bre started her garden maintenance business in 2019 with a focus on sustainability and creating healthy habitats for humans and local wildlife.
                                 <br>
-                                kjashd kjashd jashd jash kajsdh kajs hkjas   kajshdak jshdkja shkjashd kajsdh ajshdjakshdkjashd jkashdjashdakjshda.
+                                Since then she has grown to provide design, installation, and tree maintenance services with the same focuses in mind. Her husband, Anthony, joined the business in 2022 helping to reach new heights (literally).
                                 <br>
-                                snmbdfk sjdhfkjsdhfjksdhfkjsd jsd fhkjsd hkjsd hkjsdhf jksd kjsd hfksjd kjs dkj.
+                                Visit our About Us Page to learn more about our business's ethics and founders.
                                 <br><br>
                                 Sincerely,
                             </p>
@@ -149,26 +149,25 @@
                         <div id="item5-grid">
                             <a href="">
                                 <div class="item5-column">
-                                    <img alt="Garden Maintenance Image" src="https://dsm01pap009files.storage.live.com/y4m5jE4wffThRBy6Nb6SSd6Q3Vcq_7WGE7N-6GaE-opmJ1xkA0vRBRPKqRbakjXo7YAZI-4w5qAXsYjXececsK4rmZ-KiSBT-x0iJmcmk5vLSVZ7miJQ6T9sGCWUZdz-RgBlXWErRNV-wjxUnmin5-79Vx9SXBm8ZR-48ifApmB4Tg3CcoYLY6IH9DWX4nyCLEs?width=410&height=274&cropmode=none">
-                                    <h5>Garden Maintenance</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus impedit tempora.</p>
-                                </div>
-                            </a>
-                            <a href="">
-                                <div class="item5-column">
-                                    <img alt="Garden Design Image" src="https://dsm01pap009files.storage.live.com/y4m2MYxGsMRneyj84v6V_QH18jIiNZYDeVXh--UKbC7YyAa_NEd0B5XvXq2q2aOwgHbxoeJV8gHK3X70BpOeRjsn0oX966P71ZCIIXuVIUq6PNevGUAZ_7OFly2FJht41RZkVaxpsKzuvDzH_gNj9DExOQmHXvxE1JN_VlM0lqrbb5KQeRgbNU_Kx1LKhca9uYk?width=410&height=275&cropmode=none">
+                                    <img alt="Garden Design Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218752&authkey=%21AAEEz8FClYAGgyY&width=410&height=275">
                                     <h5>Garden Design and Installation</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus impedit tempora.</p>
                                 </div>
                             </a>
                             <a href="">
                                 <div class="item5-column">
-                                    <img alt="Garden Design Image" src="https://dsm01pap009files.storage.live.com/y4mK95TZsFAQfRKvvkQYlyKVq-Q0m-cboycn34uytjao5H8RCQwokC4_Jybg94t045chdrH7a9AYJN6vvW6RGsUSUjbHii7C9Zu4OmJRMTu49DQGBXhXQV7IGbxI9uruIxVGw3HI_o6MYYe9x3pqf8zNB4nv80gGONaSDc3vX8tnSeu7Wj8iyXIM1FoXPubjlZK?width=410&height=274&cropmode=none">
+                                    <img alt="Tree Care Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218753&authkey=%21AOtp8AYU-Q5jqRQ&width=410&height=274">
                                     <h5>Tree Maintenance and Removal</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus impedit tempora.</p>
                                 </div>
                             </a>
-                            
+                            <a href="">
+                                <div class="item5-column">
+                                    <h5>Hire Us!</h5>
+                                    <p>Interested in our services? Please fill out our quick questionnaire and we will set up a time for a consultation.</p>
+                                    <img alt="" src="">
+                                </div>
+                            </a>
                         </div>
                     </div>
                     <img id="treeline" src="https://dsm01pap009files.storage.live.com/y4m0h22DC8U8f0OF1CJojR5NlciGIdPJrVz_jpV3LCtJGwQlHRFwFid1RKWOmw2rI15unZK-SRWH3X_jIsEDC6Jo1c-9eCRy6Z4Q_4IiTJ8q4A1ZV0p0mgR86dwDX5TnlIr7Fz4WGAMXDwzllSJxyWw3Oy-JeHIGNGtRDjgtd2KPHrOTTxUYoKrmcyVE0CnVesa?width=1916&height=784&cropmode=none">
@@ -193,7 +192,6 @@
                         <div class="one-line-container">
                             <ul>
                                 <li><a href="">Garden Design + Installation </a></li>
-                                <li><a href="">Garden Maintenance</a></li>
                                 <li><a href="">Tree Trimming and Removal</a></li>
                             </ul>
                         </div>
