--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Gaia Gardens Gallery">
         <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Gardening and Tree Services Operating Out of the Seattle, Washington Area">
         <meta prefix="og: http://ogp.me/ns#" property="og:image" content="">
-        <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardens.net/">
+        <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardensllc.com/">
         
         <title>Gaia Gardens Image Gallery</title>
         
@@ -51,8 +51,8 @@
                             <a id="dropdown-btn" href="services.html">Services</a>
                             <div id="dropdown-content" class="hide-xs" > 
                                 <a href="tree-care.html">Tree Care</a>
-                                <a href="garden-maintenance.hmtl">Maintenance</a>
                                 <a href="garden-design.html">Garden Design</a>
+                                <a href="">Hire Us!</a>
                             </div>
                         </li>
                         <li class="non-drop"><a href="about.html">About</a></li>
@@ -174,7 +174,6 @@
                         <div class="one-line-container">
                             <ul>
                                 <li><a href="">Garden Design + Installation </a></li>
-                                <li><a href="">Garden Maintenance</a></li>
                                 <li><a href="">Tree Trimming and Removal</a></li>
                             </ul>
                         </div>
@@ -182,10 +181,11 @@
                     <li class="footer-li" id="location">
                         <h5 class="small-heading">Location</h5>
                         <div class="one-line-container">
-                            <p>Seattle, Washington</p>
+                            <p>Seattle, Washington and Eastside, Washington</p>
                         </div>
                     </li>
                 </ul>
+                <p id="bottom-tag">Gaia Gardens LLC is fully licensed, bonded, and insured</p>
             </section>
         </section>
         <!-- JavaScript -->
