--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!---OG Markup-->
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
-        <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Gaia Gardens | Home">
+        <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Gaia Gardens LLC">
         <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Gardening and Tree Services Operating Out of the Seattle, Washington Area.">
         <meta prefix="og: http://ogp.me/ns#" property="og:image" content="">
-        <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardens.net/">
+        <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardensllc.com/">
         
         <title>Gaia Gardens Home</title>
 
@@ -53,24 +53,24 @@
                 <nav id="main-nav" class="hide-xs">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
-                        <li class="non-drop"><a href="gallery.html">Gallery</a></li>
+                        <li class="non-drop"><a href="wip.html">Gallery</a></li>
                         <li id="dropdown">
-                            <a id="dropdown-btn" href="services.html">Services</a>
+                            <a id="dropdown-btn" href="wip.html">Services</a>
                             <div id="dropdown-content" class="hide-xs" > 
-                                <a href="tree-care.html">Tree Care</a>
-                                <a href="garden-design.html">Garden Design</a>
-                                <a href="hire-us.html">Hire Us!</a>
+                                <a href="wip.html">Tree Care</a>
+                                <a href="wip.html">Garden Design</a>
+                                <a href="wip.html">Hire Us!</a>
                             </div>
                         </li>
-                        <li class="non-drop"><a href="about.html">About</a></li>
-                        <li class="non-drop"><a href="contact.html">Contact</a></li>
+                        <li class="non-drop"><a href="wip.html">About</a></li>
+                        <li class="non-drop"><a href="wip.html">Contact</a></li>
                     </ul>
                 </nav>
             </header>
             <div class="splash">
                 <div class="splash-items">
                     <h1 class="large-title">Gaia Gardens</h1>
-                    <h3 class="large-subhead">Gardening and Tree Services operating in the seattle, washington area.</h3>
+                    <h3 class="large-subhead">Creating healthy habitats for humans and wildlife alike, one backyard at a time.</h3>
                     <div class="hide-xl call-now-mobile">
                         <a class="call-now-btn-mobile" href="tel:4255126491">
                             <div>    
@@ -97,8 +97,8 @@
                         <img alt="Anthony Pruning" class="hide-xs" id="side-image1" src="https://dsm01pap009files.storage.live.com/y4mhqWgWydYnY0yymSVF9IguqoVY1YiqA9RIJ9phTmFNnXPvZHAnxWS7CebUMSCGb_4lh9kSr2_14pC_AF0WcMtEgz0imfduOpR1GftjUqfrdxGr8tj5L2JONTSfKKpG2t-iCl_W15rS2VwRyVQ0GnvachcxynEAiX-OFTBkaOTv9ZPS8gF3RkVkb0R_DlCTMH1?width=540&height=781&cropmode=none">
                         <div id="two-row-container1">
                             <div id="row1">
-                                <h3>Does your garden need Expert care?</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam commodi assumenda totam. Quas asperiores, aspernatur quaerat.</p>
+                                <h3>Do you need Expert care?</h3>
+                                <p>Years of experience and training enables us to bring our customers great satisfaction in the stewardship of their land.</p>
                             </div>
                             <div id="row2">
                                 <div>
@@ -135,7 +135,7 @@
                     </div>
                     <div id="item4" class="content-item">
                         <div id="container-column">
-                            <h3>Gaia Gardens has been operating out of Washington State’s King County Since 2018.</h3>
+                            <h3>Gaia Gardens has been operating out of Washington State’s King County Since 2019.</h3>
                             <a class="arrow-button-anchor" href="">
                                 <div class="green-arrow-button">
                                     <p>read more</p>
@@ -199,10 +199,11 @@
                     <li class="footer-li" id="location">
                         <h5 class="small-heading">Location</h5>
                         <div class="one-line-container">
-                            <p>Seattle, Washington</p>
+                            <p>Seattle, Washington and Eastside, Washington</p>
                         </div>
                     </li>
                 </ul>
+                <p id="bottom-tag">Gaia Gardens LLC is fully licensed, bonded, and insured</p>
             </section>
         </section>
         <!-- JavaScript -->
