--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
         <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Gaia Gardens Gallery">
         <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Gardening and Tree Services Operating Out of the Seattle, Washington Area">
         <meta prefix="og: http://ogp.me/ns#" property="og:image" content="">
-        <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardens.net/">
+        <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardensllc.com/">
         
         <title>Gaia Gardens Gardening and Tree Care Services</title>
         
@@ -168,10 +168,11 @@
                     <li class="footer-li" id="location">
                         <h5 class="small-heading">Location</h5>
                         <div class="one-line-container">
-                            <p>Seattle, Washington</p>
+                            <p>Seattle, Washington and Eastside, Washington</p>
                         </div>
                     </li>
                 </ul>
+                <p id="bottom-tag">Gaia Gardens LLC is fully licensed, bonded, and insured</p>
             </section>
         </section>
         <!-- JavaScript -->
