--- a/index.html
+++ b/index.html
@@ -97,12 +97,11 @@
                         <img alt="Anthony Pruning" class="hide-xs" id="side-image1" src="https://dsm01pap009files.storage.live.com/y4mhqWgWydYnY0yymSVF9IguqoVY1YiqA9RIJ9phTmFNnXPvZHAnxWS7CebUMSCGb_4lh9kSr2_14pC_AF0WcMtEgz0imfduOpR1GftjUqfrdxGr8tj5L2JONTSfKKpG2t-iCl_W15rS2VwRyVQ0GnvachcxynEAiX-OFTBkaOTv9ZPS8gF3RkVkb0R_DlCTMH1?width=540&height=781&cropmode=none">
                         <div id="two-row-container1">
                             <div id="row1">
-                                <h3>Do you need Expert care?</h3>
-                                <p>Years of experience and training enables us to bring our customers great satisfaction in the stewardship of their land.</p>
+                                <h3 id="expert-care">Do you need Expert care?</h3>
+                                <p id="underline">Years of experience and training enables us to bring our customers great satisfaction in the stewardship of their land.</p>
                             </div>
                             <div id="row2">
                                 <div>
-                                    <img alt="ISA Logo" src="https://dsm01pap009files.storage.live.com/y4mxdJumObRGgBqe4A_Ete092hskZNY90Wmj_FkUqbsTkGiRvVT878UajwvOkkdaBYT0-89KLWRs0WSiG3SxPuIPQvp_J-7IvcTY5Y1f70wvFVenbykC3JIQywZ7DWHQ8bWBowS3XIzWbxJg8FKNoLI5kHYcpuo8tB3a8YGeenhT5LHkGca5xkcWKaX3fVy6atM?width=75&height=82&cropmode=none">
                                     <h5>ISA Certified Arborists</h5>
                                     <p>Being certified means we hold ourselves to the highest standard of ethics when it comes to working with trees.</p>
                                 </div>
@@ -110,7 +109,6 @@
                                     <h5 class="hide-xs" id="plus">+</h5>
                                 </div>
                                 <div>
-                                    <img alt="Flower Icon" src="https://dsm01pap009files.storage.live.com/y4mxdJumObRGgBqe4A_Ete092hskZNY90Wmj_FkUqbsTkGiRvVT878UajwvOkkdaBYT0-89KLWRs0WSiG3SxPuIPQvp_J-7IvcTY5Y1f70wvFVenbykC3JIQywZ7DWHQ8bWBowS3XIzWbxJg8FKNoLI5kHYcpuo8tB3a8YGeenhT5LHkGca5xkcWKaX3fVy6atM?width=75&height=82&cropmode=none">
                                     <h5>Professional Garden Design</h5>
                                     <p>Years of experience brings exceptional design and an aesthetic eye to your garden.</p>
                                 </div>
@@ -151,14 +149,14 @@
                                 <div class="item5-column">
                                     <img alt="Garden Design Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218752&authkey=%21AAEEz8FClYAGgyY&width=410&height=275">
                                     <h5>Garden Design and Installation</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus impedit tempora.</p>
+                                    <p>Years of experience brings exceptional design and an aesthetic eye to your garden.</p>
                                 </div>
                             </a>
                             <a href="">
                                 <div class="item5-column">
                                     <img alt="Tree Care Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218753&authkey=%21AOtp8AYU-Q5jqRQ&width=410&height=274">
                                     <h5>Tree Maintenance and Removal</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus temporibus impedit tempora.</p>
+                                    <p>Being certified means we hold ourselves to the highest standard of ethics when it comes to working with trees.</p>
                                 </div>
                             </a>
                             <a href="">
