--- a/gallery.html
+++ b/gallery.html
@@ -43,20 +43,20 @@
                 <div class="spacer"></div>
             </div>
             <header id="alternate-nav-header">
-                <nav id="alternate-nav" class="hide-xs">
+                <nav id="main-nav" class="hide-xs">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
                         <li class="non-drop"><a href="gallery.html">Gallery</a></li>
                         <li id="dropdown">
                             <a id="dropdown-btn" href="services.html">Services</a>
                             <div id="dropdown-content" class="hide-xs" > 
-                                <a href="tree-care.html">Tree Care</a>
-                                <a href="garden-design.html">Garden Design</a>
-                                <a href="">Hire Us!</a>
+                                <a href="services.html#tree-care">Tree Care</a>
+                                <a href="services.html#garden">Garden Design</a>
+                                <a href="services.html#questionnaire">Hire Us!</a>
                             </div>
                         </li>
-                        <li class="non-drop"><a href="about.html">About</a></li>
-                        <li class="non-drop"><a href="contact.html">Contact</a></li>
+                        <li class="non-drop"><a href="wip.html">About</a></li>
+                        <li class="non-drop"><a href="wip.html">Contact</a></li>
                     </ul>
                 </nav>
             </header>
@@ -77,8 +77,15 @@
                             </div>
                         </div>
                         <div id="carousel-description">
-                            <h3 id="gardenname">Garden Name 1, Location 1</h3>
-                            <p id="gardendescription">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse nostrum obcaecati vero neque dolor, nam magni dignissimos soluta distinctio. In laudantium adipisci voluptates dolores. Fuga facere ratione debitis veritatis animi.</p>
+                            <h3 id="gardenname">Laura Lohman: Queen Anne Urban Oasis</h3>
+                            <p id="gardendescription">Laura and I have worked together in her garden since 2019. Laura’ small Seattle garden
+                            is an oasis for beautiful specimens, outdoor entertaining, and a peaceful space to be
+                            able to work from home. The creation of her garden has been a team effort with Avalon
+                            NW, who’s amazing team built the unique fences and walls, containers, and patio, and
+                            custom designed the green wall built into the outdoor kitchen. The challenge in this
+                            garden has been giving space for her and her husband’s energetic Pointers but with
+                            Laura’s impeccable taste for aesthetics and my freedom to be creative with plant
+                            choices, we have created a space to be enjoyed by the whole family.</p>
                         </div>
                     </div>
                     
@@ -89,16 +96,16 @@
                     </div>
                     <div class="project-image-gallery">
                         <div class="project">
-                            <img src="" alt="Project Image"/>
-                            <div class="project-overlay"><span>Natural Urban Backyard</span></div>
+                            <img class="image-item" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218072&authkey=%21AKSy_s2R8ZYuBJ0&width=3024&height=4032" alt="Lohman Project Image"/>
+                            <div class="project-overlay"><span>Laura Lohman: Queen Anne Urban Oasis</span></div>
                         </div>
                         <div class="project">
-                            <img src="" alt="Project Image"/>
-                            <div class="project-overlay"><span>Northwest Native Landscape </span></div>
+                            <img class="image-item"src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218069&authkey=%21AD0ZbJxo0nd3YAw&width=3024&height=4032" alt="Watson Project Image"/>
+                            <div class="project-overlay"><span>Andrea Watson: Queen Anne Woodland</span></div>
                         </div>
                         <div class="project">
-                            <img src="" alt="Project Image"/>
-                            <div class="project-overlay"><span>Cozy Couple's Garden</span></div>
+                            <img class="image-item" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218866&authkey=%21APNppxyABeuv5hM&width=688&height=810" alt="Volum Project Image"/>
+                            <div class="project-overlay"><span>Sam Volum: Madison Park Beach Vibes</span></div>
                         </div>
                     </div> 
 
@@ -152,7 +159,31 @@
                                 <div class="overlay"><span>Garden 9</span></div>
                             </div>
                         </div>
-                    </div>    
+                    </div>
+                    
+                    <div class="gallery-title">
+                        <h2>Garden Design</h2>
+                    </div>
+
+                    <div class="image-gallery">
+                        <div class="column">
+                            <div class="image-item" id="image-item-1">
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218585&authkey=%21AO0S0Zmkd8IAda4&width=4646&height=3274" alt="Garden Design Artwork for Rasmussen"/>
+                                <div class="overlay"><span>Rasmussen Plan</span></div>
+                            </div>
+                            <div class="image-item" id="image-item-2">
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218592&authkey=%21AClfzGt06VC8Owc&width=5094&height=3295" alt="Garden Design Artwork for Paulson"/>
+                                <div class="overlay"><span>Paulson Plan</span></div>
+                            </div>
+                            <div class="image-item" id="image-item-3">
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218590&authkey=%21AGg7uRrcdWuVc2g&width=5007&height=2924" alt="Garden Design Artwork for Short"/>
+                                <div class="overlay"><span>Short Plan</span></div>
+                            </div>
+                            <div class="image-item" id="image-item-4">
+                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218865&authkey=%21ACkXjOZ5QCOZ1Vs&width=921&height=624" alt="Garden Design Artwork for Lamb"/>
+                                <div class="overlay"><span>Lamb Plan</span></div>
+                            </div>
+                    </div>
                     <img id="treeline" src="https://dsm01pap009files.storage.live.com/y4m0h22DC8U8f0OF1CJojR5NlciGIdPJrVz_jpV3LCtJGwQlHRFwFid1RKWOmw2rI15unZK-SRWH3X_jIsEDC6Jo1c-9eCRy6Z4Q_4IiTJ8q4A1ZV0p0mgR86dwDX5TnlIr7Fz4WGAMXDwzllSJxyWw3Oy-JeHIGNGtRDjgtd2KPHrOTTxUYoKrmcyVE0CnVesa?width=1916&height=784&cropmode=none">
                 </div>
             </section>
@@ -173,8 +204,8 @@
                         <h5 class="small-heading">Services</h5>
                         <div class="one-line-container">
                             <ul>
-                                <li><a href="">Garden Design + Installation </a></li>
-                                <li><a href="">Tree Trimming and Removal</a></li>
+                                <li><a href="services.html#garden">Garden Design + Installation </a></li>
+                                <li><a href="services.html#tree-care">Tree Trimming and Removal</a></li>
                             </ul>
                         </div>
                     </li>
