--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
                 <nav id="main-nav" class="hide-xs">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
-                        <li class="non-drop"><a href="wip.html">Gallery</a></li>
+                        <li class="non-drop"><a href="gallery.html">Gallery</a></li>
                         <li id="dropdown">
-                            <a id="dropdown-btn" href="wip.html">Services</a>
+                            <a id="dropdown-btn" href="services.html">Services</a>
                             <div id="dropdown-content" class="hide-xs" > 
-                                <a href="wip.html">Tree Care</a>
-                                <a href="wip.html">Garden Design</a>
-                                <a href="wip.html">Hire Us!</a>
+                                <a href="services.html#tree-care">Tree Care</a>
+                                <a href="services.html#garden">Garden Design</a>
+                                <a href="services.html#questionnaire">Hire Us!</a>
                             </div>
                         </li>
                         <li class="non-drop"><a href="wip.html">About</a></li>
@@ -145,21 +145,21 @@
                     <div id="item5" class="content-item">
                         <h3>Our Services</h3>
                         <div id="item5-grid">
-                            <a href="">
+                            <a href="services.html#garden">
                                 <div class="item5-column">
                                     <img alt="Garden Design Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218752&authkey=%21AAEEz8FClYAGgyY&width=410&height=275">
                                     <h5>Garden Design and Installation</h5>
                                     <p>Years of experience brings exceptional design and an aesthetic eye to your garden.</p>
                                 </div>
                             </a>
-                            <a href="">
+                            <a href="services.html#tree-care">
                                 <div class="item5-column">
                                     <img alt="Tree Care Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218753&authkey=%21AOtp8AYU-Q5jqRQ&width=410&height=274">
                                     <h5>Tree Maintenance and Removal</h5>
                                     <p>Being certified means we hold ourselves to the highest standard of ethics when it comes to working with trees.</p>
                                 </div>
                             </a>
-                            <a href="">
+                            <a href="services.html#questionnaire">
                                 <div class="item5-column">
                                     <h5>Hire Us!</h5>
                                     <p>Interested in our services? Please fill out our quick questionnaire and we will set up a time for a consultation.</p>
@@ -189,8 +189,8 @@
                         <h5 class="small-heading">Services</h5>
                         <div class="one-line-container">
                             <ul>
-                                <li><a href="">Garden Design + Installation </a></li>
-                                <li><a href="">Tree Trimming and Removal</a></li>
+                                <li><a href="services.html#garden">Garden Design + Installation </a></li>
+                                <li><a href="services.html#tree-care">Tree Trimming and Removal</a></li>
                             </ul>
                         </div>
                     </li>
