--- a/wip.html
+++ b/wip.html
@@ -40,17 +40,17 @@
                 <nav id="alternate-nav" class="hide-xs">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
-                        <li class="non-drop"><a href="wip.html">Gallery</a></li>
+                        <li class="non-drop"><a href="gallery.html">Gallery</a></li>
                         <li id="dropdown">
-                            <a id="dropdown-btn" href="wip.html">Services</a>
+                            <a id="dropdown-btn" href="services.html">Services</a>
                             <div id="dropdown-content" class="hide-xs" > 
-                                <a href="wip.html">Tree Care</a>
-                                <a href="wip.html">Garden Design</a>
-                                <a href="wip.html">Hire Us!</a>
+                                <a href="services.html#tree-care">Tree Care</a>
+                                <a href="services.html#garden">Garden Design</a>
+                                <a href="services.html#questionnaire">Hire Us!</a>
                             </div>
                         </li>
-                        <li class="non-drop"><a href="about.html">About</a></li>
-                        <li class="non-drop"><a href="contact.html">Contact</a></li>
+                        <li class="non-drop"><a href="wip.html">About</a></li>
+                        <li class="non-drop"><a href="wip.html">Contact</a></li>
                     </ul>
                 </nav>
             </header>
