--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </div>
                     <div id="item3" class="content-item">
                         <div id="familyinfo">
-                            <img alt="family photo" src="https://dsm01pap009files.storage.live.com/y4mqt4HtK30bY33VgAFQBZTy4ZPhrWRCys-r-4VAt9rzwykEi2hatvmJi7k0zbVoMIrTansLN6qpXUj-i7btYU3yXYxWmdFQnFlMqukJx1IIJv6RSyv0MwrRubh9ZWCiuxnSJnZfOL5_oSCrL8gz1d7Fw0KkIPLdpjo6RGGBMGCX5ECmPJ3RqjhIKpiJzcRd1Q9?width=560&height=700&cropmode=none">
+                            <img class="hide-xl" alt="family photo" src="https://dsm01pap009files.storage.live.com/y4mqt4HtK30bY33VgAFQBZTy4ZPhrWRCys-r-4VAt9rzwykEi2hatvmJi7k0zbVoMIrTansLN6qpXUj-i7btYU3yXYxWmdFQnFlMqukJx1IIJv6RSyv0MwrRubh9ZWCiuxnSJnZfOL5_oSCrL8gz1d7Fw0KkIPLdpjo6RGGBMGCX5ECmPJ3RqjhIKpiJzcRd1Q9?width=560&height=700&cropmode=none">
                             <h3>Our Story</h3>
                             <p>
                                 Bre started her garden maintenance business in 2019 with a focus on sustainability and creating healthy habitats for humans and local wildlife.
@@ -144,7 +144,7 @@
                             </p>
                             <h5>Bre and Anthony Moravec</h5>
                         </div>
-                        
+                        <img class="hide-xs" alt="family photo" src="https://dsm01pap009files.storage.live.com/y4mqt4HtK30bY33VgAFQBZTy4ZPhrWRCys-r-4VAt9rzwykEi2hatvmJi7k0zbVoMIrTansLN6qpXUj-i7btYU3yXYxWmdFQnFlMqukJx1IIJv6RSyv0MwrRubh9ZWCiuxnSJnZfOL5_oSCrL8gz1d7Fw0KkIPLdpjo6RGGBMGCX5ECmPJ3RqjhIKpiJzcRd1Q9?width=560&height=700&cropmode=none">
                     </div>
                     <div id="item4" class="content-item">
                         <div id="container-column">
@@ -220,8 +220,9 @@
             </section>
         </section>
         <!-- JavaScript -->
-        <script src="js/main.js"></script>
         <script src="js/mobile.js"></script>
+        <script src="js/main.js"></script>
+
     
     </body> 
 </html>
