--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     </div>
                     <div id="item5" class="content-item">
                         <h3>Our Services</h3>
-                        <div id="item5-grid">
+                        <div id="item5-grid" class="hide-xs">
                             <a href="services.html#garden">
                                 <div class="item5-column">
                                     <img class="hide-xs" alt="Garden Design Image" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218752&authkey=%21AAEEz8FClYAGgyY&width=410&height=275">
