--- a/services.html
+++ b/services.html
@@ -33,7 +33,7 @@
         <div class="loader"></div>
         <div class="overlay-carousel-container">
             <div class="overlay-carousel hide-xs">
-                <img class="x" src="https://dsm01pap009files.storage.live.com/y4m47swC9qlH0QYR6nxWgyP45EEWG7fAUXFfFd1B90c_f7tTE29KjhANP7O02vr_r05ArR2IYPWTXd2pMGBFgxo6wFfBTd4XqcDS6TjYyfNRR1I6NQirgDxTz19SK-_b66LUKA9rUklVh_1foQ0ix7Lmn0MBIVPpMeMwp_E61gN_x2GL0OSvtCPwxSNZNlHkOE5?width=256&height=256&cropmode=none">
+                <img class="x" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742172845/exit_x2p8an.png">
                 <div class="overlay-carousel-picture"></div>
             </div>
             <div class="dark-overlay hide-xs"></div>
